--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -8,14 +8,15 @@
 #   dns-zone = openshift.demo.redislabs.com
 # then your host will be the following:
 # stomp.host=redisbank-redis-ent-dev.apps.c1.openshift.demo.redislabs.com
-stomp.host=redisbank-redis-ent-dev.apps.c1.openshift.demo.redislabs.com
+spring.profiles.active=openshift
+stomp.host=redisbank-redis-apps.apps.uki-okd.demo.redislabs.com
 # ws | wss for websockets OR websockets secured accordingly
 stomp.protocol=ws
 # the default route will be 80 for http and 443 for https
 stomp.port=80
 # the service name of your database, get it using the command below:
 #   oc get secret redb-bankdb -o jsonpath="{.data.service_names}" | base64 --decode
-spring.redis.host=bankdb
+spring.redis.host=redisbank
 # the port of your database, get it using the command below:
 #   oc get secret redb-bankdb -o jsonpath="{.data.port}" | base64 --decode
 spring.redis.port=12869
