--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -16,7 +16,7 @@ stomp.protocol=ws
 stomp.port=80
 # the service name of your database, get it using the command below:
 #   oc get secret redb-bankdb -o jsonpath="{.data.service_names}" | base64 --decode
-spring.redis.host=redisbank
+spring.redis.host=bankdb.redis-apps.svc.cluster.local
 # the port of your database, get it using the command below:
 #   oc get secret redb-bankdb -o jsonpath="{.data.port}" | base64 --decode
 spring.redis.port=12869
