--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Profile
-# spring.profiles.active=openshift
+spring.profiles.active=openshift
 
 # Properties for running on localhost
 stomp.host=localhost
