--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,18 @@
 spring.profiles.active=openshift
 
 # Properties for running on localhost
-stomp.host=localhost
+#stomp.host=localhost
+#stomp.protocol=ws
+#stomp.port=8080
+#spring.redis.host=${REDIS_HOST:localhost}
+#spring.redis.port=${REDIS_PORT:6379}
+
+stomp.host=redisbank-redis-apps.apps.uki-okd.demo.redislabs.com
 stomp.protocol=ws
-stomp.port=8080
-spring.redis.host=${REDIS_HOST:localhost}
-spring.redis.port=${REDIS_PORT:6379}
+stomp.port=80
+spring.redis.host=bankdb.redis-apps.svc.cluster.local
+spring.redis.port=12869
+spring.redis.password=redisbank
 
 # Properties for running on Azure Spring Cloud
 #stomp.host=<app>-<service>.azuremicroservices.io
