--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Profile
-spring.profiles.active=openshift
+spring.profiles.active=${SPRING_PROFILE:prod}
 
 # Properties for running on localhost
-#stomp.host=localhost
-#stomp.protocol=ws
-#stomp.port=8080
-#spring.redis.host=${REDIS_HOST:localhost}
-#spring.redis.port=${REDIS_PORT:6379}
+stomp.host=${STOMP_HOST:localhost}
+stomp.protocol=${STOMP_PROTOCOL:ws}
+stomp.port=${STOMP_PORT:8080}
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.port=${REDIS_PORT:6379}
 
 # Properties for running on Azure Spring Cloud
 #stomp.host=<app>-<service>.azuremicroservices.io
