--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ stomp.protocol=${STOMP_PROTOCOL:ws}
 stomp.port=${STOMP_PORT:8080}
 spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.port=${REDIS_PORT:6379}
+spring.redis.password=${REDIS_PASSWORD:redisbank}
 
 # Properties for running on Azure Spring Cloud
 #stomp.host=<app>-<service>.azuremicroservices.io
