--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,10 @@ spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.port=${REDIS_PORT:6379}
 spring.redis.password=${REDIS_PASSWORD:redisbank}
 
-# Properties for running on Azure Spring Cloud
-#stomp.host=<app>-<service>.azuremicroservices.io
-#stomp.protocol=wss
-#stomp.port=443
-#spring.redis.host=<name>.<region>.redisenterprise.cache.azure.net
-#spring.redis.port=10000
-#spring.redis.password=
+# Externalise auth to source from env
+spring.redis.bank.username=${REDIS_BANK_USERNAME:lars}
+spring.redis.bank.password=${REDIS_BANK_PWD:larsje}
+spring.redis.bank.roles=${REDIS_BANK_ROLES:USER}
 
 # Global properties
 stomp.endpoint=/websocket
