--- a/openshift/redisbank-db-auth.yaml
+++ b/openshift/redisbank-db-auth.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: bankdb-pwd
+  name: redisbank-db-auth
 data:
   password: cmVkaXNiYW5r
 type: Opaque
